Completed task A.2, I think!
I added all .stl, .rviz, and .urdf.xacro files to the repository and
added an install function to the CMakeLists file as well. I also added
an install function for the launch directory. I added a find_package(rclcpp Required)
line as well, since the ROS documentation did that and I assume I'll need
that too eventually.

I'm not sure if my directory hierarchy is what matt wants, but I'm pretty
sure it'll work and I like it so that's how it's going to stay for now.

Modified urdf files to reference files within my package, and not
turtlebot3_description. I'll need to update the file extensions of those files
to .urdf.xacro instead of .urdf, but I will do that in nthe next commit
since I forgot this time.

Put the launchfile in declarative style as well.

--- a/nuturtle_description/CMakeLists.txt
+++ b/nuturtle_description/CMakeLists.txt
@@ -7,9 +7,27 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+
+ament_target_dependencies(rclcpp)
+
+# install targets
+install(
+  TARGETS
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+# install launch files
+install(
+  DIRECTORY launch/
+  DESTINATION share/launch/${PROJECT_NAME}
+)
+
+# install .stl, .urdf.xacro, and .rviz files
+install(
+  DIRECTORY config/
+  DESTINATION share/config/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,5 +40,7 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+
 
 ament_package()
