The launch file works and step A.4 is complete
AFter much troubleshooting, the launchfile works and everything is
loaded in correctly with the correct prefixes and everyitng. now I must
go around and add separate rviz files for each color and add logic to
the launch file for using them.

--- a/nuturtle_description/CMakeLists.txt
+++ b/nuturtle_description/CMakeLists.txt
@@ -9,24 +9,40 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 
-ament_target_dependencies(rclcpp)
+# ament_target_dependencies(rclcpp)
 
 # install targets
-install(
-  TARGETS
-  DESTINATION lib/${PROJECT_NAME}
-)
+# install(
+#   TARGETS
+#   DESTINATION lib/${PROJECT_NAME}
+# )
 
 # install launch files
 install(
   DIRECTORY launch/
-  DESTINATION share/launch/${PROJECT_NAME}
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# install config directory
+install(
+  DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/config
 )
 
 # install .stl, .urdf.xacro, and .rviz files
 install(
-  DIRECTORY config/
-  DESTINATION share/config/${PROJECT_NAME}
+  DIRECTORY meshes/
+  DESTINATION share/${PROJECT_NAME}/meshes
+)
+
+install(
+  DIRECTORY rviz/
+  DESTINATION share/${PROJECT_NAME}/rviz
+)
+
+install(
+  DIRECTORY urdf/
+  DESTINATION share/${PROJECT_NAME}/urdf
 )
 
 if(BUILD_TESTING)
