Created svg.hpp, svg.cpp, test_svg.cpp
Created these three files and finished implementing them. Have yet to
run cmake, but I will try to create the svg file now.

--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 # name creates a cmake "target"
 add_library(geometry2d src/geometry2d.cpp)
 add_library(se2d src/se2d.cpp)
+add_library(svg src/svg.cpp)
 
 # Use target_include_directories so that #include"mylibrary/header.hpp" works
 # The use of the <BUILD_INTERFACE> and <INSTALL_INTERFACE> is because when
@@ -49,18 +50,24 @@ target_include_directories(se2d
     PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
     $<INSTALL_INTERFACE:include/>)
+target_include_directories(svg
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
+    $<INSTALL_INTERFACE:include/>)
 
 # specify additional compilation flags for the library
 # Public causes the flags to propagate to anything
 # that links against this library
 target_compile_options(geometry2d PUBLIC -Wall -Wextra -pedantic)
 target_compile_options(se2d PUBLIC -Wall -Wextra -pedantic)
+target_compile_options(svg PUBLIC -Wall -Wextra -pedantic)
 
 # Enable c++17 support.
 # Public causes the features to propagate to anything
 # that links against this library
 target_compile_features(geometry2d PUBLIC cxx_std_17)
 target_compile_features(se2d PUBLIC cxx_std_17)
+target_compile_features(svg PUBLIC cxx_std_17)
 
 # Create an executable from the following source code files
 # The Name of the executable creates a cmake "target"
@@ -80,7 +87,7 @@ install(DIRECTORY include/turtlelib DESTINATION include)
 # Also create CMake Export called projet_name-targets
 # The CMake Export contains files that allow other CMake projects
 # to find this project. It must be installed separately.
-install(TARGETS turtlelib geometry2d se2d EXPORT turtlelib-targets)
+install(TARGETS turtlelib geometry2d se2d svg EXPORT turtlelib-targets)
 # install(TARGETS turtlelib se2d EXPORT turtlelib-targets)
 
 # The project_name-targets created by install(TARGETS) needs to be installed.
@@ -111,4 +118,8 @@ if(BUILD_TESTING)
     add_executable(test_se2d tests/test_se2d.cpp)
     target_link_libraries(test_se2d Catch2::Catch2WithMain se2d)
     add_test(NAME se2d_test COMMAND test_se2d)
+
+    add_executable(test_svg tests/test_svg.cpp)
+    target_link_libraries(test_svg Catch2::Catch2WithMain svg)
+    add_test(NAME svg_test COMMAND test_svg)
 endif()
