Finished all test cases for part B
Also added a directory inside turtlelib where I can keep files related
to svg testing. Before I was keeping them in the build directory, which
I realized wouldn't work long term obviously. I made sure i have a test
case for every function in each of the three header files.

--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -31,6 +31,10 @@ endif()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/exercises/B6_frame_input.txt
     ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 
+# Copy over the test_case_files directory to the build directory
+execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
+    "${CMAKE_CURRENT_SOURCE_DIR}/test_case_files" "${CMAKE_CURRENT_BINARY_DIR}")
+
 # Create a library.  Can specify if it is shared or static but usually
 # you don't need or want to.
 # name is the name of the library without the extension or lib prefix
