--- a/nusim/CMakeLists.txt
+++ b/nusim/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
@@ -32,6 +33,7 @@ ament_target_dependencies(
   std_msgs
   std_srvs
   geometry_msgs
+  visualization_msgs
   rclcpp
   tf2
   tf2_ros
