--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -18,6 +18,7 @@
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>visualization_msgs</depend>
 
   <exec_depend>rviz2</exec_depend>
 
