--- a/nuturtle_control/CMakeLists.txt
+++ b/nuturtle_control/CMakeLists.txt
@@ -11,9 +11,28 @@ find_package(nuturtle_description REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nuturtlebot_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
+# find libraries
+find_package(turtlelib REQUIRED)
+
+
 
 add_executable(turtle_control src/turtle_control.cpp)
-ament_target_dependencies(turtle_control nuturtle_description nuturtlebot_msgs geometry_msgs rclcpp)
+
+
+ament_target_dependencies(
+  turtle_control
+  rclcpp
+  sensor_msgs
+  turtlelib
+  nuturtle_description
+  nuturtlebot_msgs
+  geometry_msgs
+)
+
+target_link_libraries(turtle_control turtlelib::turtlelib)
+
 target_include_directories(turtle_control PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
