Added circle and odometry nodes
Close to done with odometry and the circle will be next. I want to make
sure I can get on a robot by tomorrow evening, and then I can spend
Thursday cleaning up the code, documenting, and the like wihtout having
to compete for a robot.

--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -19,6 +19,7 @@
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
   <depend>visualization_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <exec_depend>rviz2</exec_depend>
 
