--- a/nuturtle_control/CMakeLists.txt
+++ b/nuturtle_control/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nuturtlebot_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 
 # find libraries
 find_package(turtlelib REQUIRED)
@@ -19,11 +20,34 @@ find_package(turtlelib REQUIRED)
 
 
 add_executable(turtle_control src/turtle_control.cpp)
-
+add_executable(odometry src/odometry.cpp)
+add_executable(circle src/circle.cpp)
 
 ament_target_dependencies(
   turtle_control
   rclcpp
+  nav_msgs
+  sensor_msgs
+  turtlelib
+  nuturtle_description
+  nuturtlebot_msgs
+  geometry_msgs
+)
+
+ament_target_dependencies(
+  odometry
+  rclcpp
+  nav_msgs
+  sensor_msgs
+  turtlelib
+  nuturtle_description
+  nuturtlebot_msgs
+  geometry_msgs
+)
+ament_target_dependencies(
+  circle
+  rclcpp
+  nav_msgs
   sensor_msgs
   turtlelib
   nuturtle_description
@@ -32,6 +56,8 @@ ament_target_dependencies(
 )
 
 target_link_libraries(turtle_control turtlelib::turtlelib)
+target_link_libraries(odometry turtlelib::turtlelib)
+target_link_libraries(circle turtlelib::turtlelib)
 
 target_include_directories(turtle_control PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -40,6 +66,8 @@ target_compile_features(turtle_control PUBLIC c_std_99 cxx_std_17)  # Require C9
 
 install(TARGETS 
   turtle_control
+  odometry
+  circle
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
