--- a/nuturtle_control/CMakeLists.txt
+++ b/nuturtle_control/CMakeLists.txt
@@ -13,15 +13,22 @@ find_package(rclcpp REQUIRED)
 find_package(nuturtlebot_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
 # find libraries
 find_package(turtlelib REQUIRED)
 
-
-
 add_executable(turtle_control src/turtle_control.cpp)
 add_executable(odometry src/odometry.cpp)
 add_executable(circle src/circle.cpp)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/RobotConfiguration.msg"
+  "srv/InitialPose.srv"
+)
 
 ament_target_dependencies(
   turtle_control
@@ -32,6 +39,9 @@ ament_target_dependencies(
   nuturtle_description
   nuturtlebot_msgs
   geometry_msgs
+  tf2
+  tf2_ros
+  tf2_geometry_msgs
 )
 
 ament_target_dependencies(
@@ -43,6 +53,9 @@ ament_target_dependencies(
   nuturtle_description
   nuturtlebot_msgs
   geometry_msgs
+  tf2
+  tf2_ros
+  tf2_geometry_msgs
 )
 ament_target_dependencies(
   circle
@@ -53,8 +66,15 @@ ament_target_dependencies(
   nuturtle_description
   nuturtlebot_msgs
   geometry_msgs
+  tf2
+  tf2_ros
+  tf2_geometry_msgs
 )
 
+rosidl_get_typesupport_target(cpp_typesupport_target
+  ${PROJECT_NAME} rosidl_typesupport_cpp)
+
+target_link_libraries(odometry "${cpp_typesupport_target}")
 target_link_libraries(turtle_control turtlelib::turtlelib)
 target_link_libraries(odometry turtlelib::turtlelib)
 target_link_libraries(circle turtlelib::turtlelib)
