--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -8,6 +8,7 @@
   <license>APLv2</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <depend>rclcpp</depend>
   <depend>geometry_msgs</depend>
@@ -15,6 +16,13 @@
   <depend>nuturtlebot_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>turtlelib</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
