--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -23,6 +23,7 @@
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>numsr_turtlebot</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
