--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -24,6 +24,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>numsr_turtlebot</depend>
+  <depend>catch_ros2</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
