--- a/nuturtle_control/CMakeLists.txt
+++ b/nuturtle_control/CMakeLists.txt
@@ -126,6 +126,7 @@ if(BUILD_TESTING)
 
   add_executable(turtle_control_test tests/turtle_control_test.cpp)
   add_executable(turtle_odom_test tests/turtle_odom_test.cpp)
+  add_executable(turtle_circle_test tests/turtle_circle_test.cpp)
 
   target_link_libraries(turtle_control_test
   catch_ros2::catch_ros2_with_node_main)
@@ -133,6 +134,9 @@ if(BUILD_TESTING)
   target_link_libraries(turtle_odom_test
   catch_ros2::catch_ros2_with_node_main
   "${cpp_typesupport_target}")
+
+  target_link_libraries(turtle_circle_test
+  catch_ros2::catch_ros2_with_node_main)
 
   ament_target_dependencies(turtle_control_test
     rclcpp
@@ -146,34 +150,36 @@ if(BUILD_TESTING)
     tf2_ros
   )
 
+  ament_target_dependencies(turtle_circle_test
+    rclcpp
+    geometry_msgs
+  )
+
   install(TARGETS
     turtle_control_test
     turtle_odom_test
+    turtle_circle_test
     DESTINATION lib/${PROJECT_NAME}
   )
 
   install(FILES
     tests/turtle_control_test.launch.xml
     tests/turtle_odom_test.launch.xml
-    # tests/turtle_circle_test.launch.xml
+    tests/turtle_circle_test.launch.xml
     DESTINATION share/${PROJECT_NAME}
-  )
-  catch_ros2_add_integration_test(TurtleOdomIntegration_TestCpp
-    LAUNCH_FILE turtle_odom_test.launch.xml
   )
 
   catch_ros2_add_integration_test(TurtleControlIntegration_TestCpp
     LAUNCH_FILE turtle_control_test.launch.xml
   )
 
+  catch_ros2_add_integration_test(TurtleOdomIntegration_TestCpp
+    LAUNCH_FILE turtle_odom_test.launch.xml
+  )
 
-  # catch_ros2_add_integration_test(OdometryIntegration_TestCpp
-  #   LAUNCH_FILE turtle_odom_test.launch.xml
-  # )
-
-  # catch_ros2_add_integration_test(CircleIntegration_TestCpp
-  #   LAUNCH_FILE turtle_circle_test.launch.xml
-  # )
+  catch_ros2_add_integration_test(TurtleCircleIntegration_TestCpp
+    LAUNCH_FILE turtle_circle_test.launch.xml
+  )
 
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
