--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -5,6 +5,8 @@ cmake_minimum_required(VERSION 3.22)
 # find the c and c++ compilers
 project(turtlelib)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Type of build." FORCE)
 endif()
