Completed tasks F.6 and V.1

--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -22,6 +22,7 @@
   <depend>visualization_msgs</depend>
   <depend>turtlelib</depend>
   <depend>nuturtlebot_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <exec_depend>rviz2</exec_depend>
 
