--- a/nusim/CMakeLists.txt
+++ b/nusim/CMakeLists.txt
@@ -22,8 +22,9 @@ find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-find_package(turtlelib)
-find_package(nuturtlebot_msgs)
+find_package(turtlelib REQUIRED)
+find_package(nuturtlebot_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 
 set(srv_files
   "srv/Teleport.srv"
@@ -52,6 +53,7 @@ ament_target_dependencies(
   tf2_geometry_msgs
   turtlelib
   nuturtlebot_msgs
+  nav_msgs
 )
 
 install(TARGETS
