Task v.1 actually complete this time
what was i thinking?

--- a/nusim/CMakeLists.txt
+++ b/nusim/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(turtlelib REQUIRED)
 find_package(nuturtlebot_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 set(srv_files
   "srv/Teleport.srv"
