--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -23,6 +23,7 @@
   <depend>turtlelib</depend>
   <depend>nuturtlebot_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <exec_depend>rviz2</exec_depend>
 
