--- a/nuslam/package.xml
+++ b/nuslam/package.xml
@@ -8,6 +8,8 @@
   <license>APLv2</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
