--- a/nuslam/CMakeLists.txt
+++ b/nuslam/CMakeLists.txt
@@ -10,6 +10,8 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
 find_package(turtlelib REQUIRED)
 find_package(Armadillo REQUIRED)
@@ -26,6 +28,8 @@ ament_target_dependencies(
     visualization_msgs
     nav_msgs
     tf2_ros
+    tf2
+    tf2_geometry_msgs
     turtlelib
     Armadillo
 )
